--- a/spotify-clone/package.json
+++ b/spotify-clone/package.json
@@ -9,15 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.3.1",
     "next": "11.0.1",
-    "postcss": "^8.3.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tailwindcss": "^2.2.7"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.3.1",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7"
   }
 }
